updates to gee python ipynb

--- a/tutorials/Other/GEE_Python/01_sdr_landsat_spectra/GEE_Visualize_AOP_Hyperspectral.ipynb
+++ b/tutorials/Other/GEE_Python/01_sdr_landsat_spectra/GEE_Visualize_AOP_Hyperspectral.ipynb
@@ -2,6 +2,62 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c37c054e",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "syncID: \n",
+    "title: \"Scaling AOP Hyperspectral Data to Landsat Data in GEE using Python geemap\"\n",
+    "description: \"\"\n",
+    "dateCreated: 2023-06-20\n",
+    "authors: Bridget Hass\n",
+    "contributors: John Musinsky\n",
+    "estimatedTime: 30 minutes\n",
+    "packagesLibraries: ee, geemap\n",
+    "topics:\n",
+    "languagesTool: Python, Google Earth Engine\n",
+    "dataProduct: DP3.30006.001\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/\n",
+    "tutorialSeries: \n",
+    "urlTitle: aop-refl-scaling-py-geemap\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93b806b0",
+   "metadata": {},
+   "source": [
+    "div id=\"ds-objectives\" markdown=\"1\">\n",
+    "\n",
+    "### Objectives\n",
+    "After completing this tutorial, you will be able to use Python to:\n",
+    "\n",
+    "* Determine the available AOP Surface Directional Reflectance (SDR) datasets in Google Earth Engine\n",
+    "* Use functions to read in SDR data sets and mask out bad weather data (>10% cloud cover)\n",
+    "* Explore the interactive mapping features in geemap\n",
+    "* Create a time-lapse animation of a site\n",
+    "\n",
+    "### Requirements\n",
+    "\n",
+    "To follow along with this code, you will need to \n",
+    "1. Sign up for a non-commercial Google Earth Engine account here https://code.earthengine.google.com/register.\n",
+    "2. Install **Python 3.x**\n",
+    "3. Install required Python packages (matplotlib, cartopy and the dependent packages are only required for the last optional part of the tutorial, to create a time-lapse gif)\n",
+    "    - ee\n",
+    "    - geemap\n",
+    "    - matplotlib\n",
+    "    - cartopy (dependencies: geos, shapely, pyproj)\n",
+    "\n",
+    "Notes: \n",
+    "- This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. This lesson was written in **Jupyter Notebook** so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using **Jupyter**, we recommend using **Spyder**, which has similar functionality. You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href=\"https://www.anaconda.com/products/distribution\" target=\"_blank\">Anaconda</a>.\n",
+    "  If cartopy is not installing using `conda install` or `pip install`, you may need to find the wheel file specific to your Python version, eg. `pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl`.\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "soviet-complex",
    "metadata": {},
    "source": [
