--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "819d6492",
-   "metadata": {},
-   "source": [
-    "# AOP GEE Time Series Using Python geemap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bd511a0c",
    "metadata": {},
    "source": [
@@ -36,7 +28,7 @@
    "id": "919ba0ee",
    "metadata": {},
    "source": [
-    "<div id=\"ds-objectives\" markdown=\"1\">\n",
+    "div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
     "### Objectives\n",
     "After completing this tutorial, you will be able to use Python to:\n",
@@ -48,29 +40,20 @@
     "\n",
     "### Requirements\n",
     "\n",
-    "To follow along with this code, you will need to install **Python 3.x** and sign up for a non-commercial Google Earth Engine account here https://code.earthengine.google.com/register. This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. \n",
+    "To follow along with this code, you will need to \n",
+    "1. Sign up for a non-commercial Google Earth Engine account here https://code.earthengine.google.com/register.\n",
+    "2. Install **Python 3.x**\n",
+    "3. Install required Python packages (matplotlib, cartopy and the dependent packages are only required for the last optional part of the tutorial, to create a time-lapse gif)\n",
+    "    - ee\n",
+    "    - geemap\n",
+    "    - matplotlib\n",
+    "    - cartopy (dependencies: geos, shapely, pyproj)\n",
     "\n",
-    "This lesson was written in **Jupyter Notebook** so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using **Jupyter**, we recommend using **Spyder**, which has similar functionality. \n",
+    "Notes: \n",
+    "- This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. This lesson was written in **Jupyter Notebook** so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using **Jupyter**, we recommend using **Spyder**, which has similar functionality. You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href=\"https://www.anaconda.com/products/distribution\" target=\"_blank\">Anaconda</a>.\n",
+    "  If cartopy is not installing using `conda install` or `pip install`, you may need to find the wheel file specific to your Python version, eg. `pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl`.\n",
     "\n",
-    "* **Install Python 3.x and Jupyter Notebooks** \n",
-    "You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href=\"https://www.anaconda.com/products/distribution\" target=\"_blank\">Anaconda</a>.\n",
-    "\n",
-    "* **Sign up for a GEE non-commercial account and set up a cloud project**\n",
-    "\n",
-    "* **Install required Python packages**\n",
-    "\n",
-    "    * ee\n",
-    "    * geemap\n",
-    "    * matplotlib\n",
-    "\n",
-    "The last optional part, to create a time-lapse uses the `cartoee` package in geemap, which requires the following packages:\n",
-    "\n",
-    "    * cartopy\n",
-    "    * geos\n",
-    "    * shapely\n",
-    "    * pyproj\n",
-    "    \n",
-    "Note: if cartopy is not installing using conda or pip install, you may need to find the wheel file specific to your Python version, eg. `pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl`."
+    "</div>"
    ]
   },
   {
@@ -209,8 +192,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to read the AOP SDR image collection\n",
-    "# selects the data bands and masks to include only the clear-weather data (<10% cloud cover)\n",
     "def sdr_clear_weather(year):\n",
     "\n",
     "    # Specify the start and end dates\n",
@@ -298,6 +279,14 @@
     "    weather_quality_band = aop_sdr.select(['Weather_Quality_Indicator']);\n",
     "\n",
     "    return weather_quality_band"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b7f03da",
+   "metadata": {},
+   "source": [
+    "Similarly, we will map this function over the list of years, and then add these weather quality images to the Map layer in a loop. For this we can define a color palette that will match AOP's weather stop-light color convention, where green means good weather (<10% cloud cover), yellow is OK (10-50% cloud cover), and red is bad (>50% cloud cover)."
    ]
   },
   {
@@ -401,9 +390,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e297136",
+   "metadata": {},
+   "source": [
+    "You should now see the Map panel populated with the CLBJ Image Collection and the Weather Quality Band. On your own, explore some of the options by click on the icon in the upper right corner of the map. Some options of interest may be the timelapse (double arrow), ..., and ... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "25bc945a",
    "metadata": {},
    "source": [
+    "### Create  a Time-Lapse GIF\n",
     "Lastly, optionally, we can create a time-lapse gif of the site over all the collections. This part follows along code from the GeoPython 2021 workshop: https://geemap.org/workshops/GeoPython_2021/#create-timelapse-animations."
    ]
   },
@@ -425,6 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define width and height (in degrees)\n",
     "w = 0.1\n",
     "h = 0.1\n",
     "\n",
@@ -432,13 +431,13 @@
     "\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "\n",
-    "# use cartoee to get a map\n",
+    "# Use cartoee to get a map\n",
     "ax = geemap.cartoee.get_map(image, region=region, vis_params=visParams)\n",
     "\n",
-    "# add gridlines to the map at a specified interval\n",
+    "# Add gridlines to the map at a specified interval\n",
     "geemap.cartoee.add_gridlines(ax, interval=[0.05, 0.05], linestyle=\":\")\n",
     "\n",
-    "# add scale bar\n",
+    "# Add scale bar\n",
     "scale_bar_dict = {\n",
     "    \"length\": 10,\n",
     "    \"xy\": (0.1, 0.05),\n",
@@ -454,6 +453,14 @@
     "ax.set_title(label='CLBJ', fontsize=15)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8db4e34",
+   "metadata": {},
+   "source": [
+    "We can then apply these settings and create the timelaps using `cartoee.get_image_collection_gif` as follows. This will create a \"timelapse\" subfolder in the Downloads directory."
    ]
   },
   {
@@ -479,6 +486,14 @@
     "    file_format=\"png\",\n",
     "    scale_bar_dict=scale_bar_dict,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca39ad57",
+   "metadata": {},
+   "source": [
+    "### Recap"
    ]
   }
  ],
