updates to ipynb and re-knit to generate the other files

--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7f03da",
+   "id": "82292e77",
    "metadata": {},
    "source": [
     "Similarly, we will map this function over the list of years, and then add these weather quality images to the Map layer in a loop. For this we can define a color palette that will match AOP's weather stop-light color convention, where green means good weather (<10% cloud cover), yellow is OK (10-50% cloud cover), and red is bad (>50% cloud cover)."
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e297136",
+   "id": "e219810d",
    "metadata": {},
    "source": [
     "You should now see the Map panel populated with the CLBJ Image Collection and the Weather Quality Band. On your own, explore some of the options by click on the icon in the upper right corner of the map. Some options of interest may be the timelapse (double arrow), ..., and ... "
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8db4e34",
+   "id": "b68ee19a",
    "metadata": {},
    "source": [
     "We can then apply these settings and create the timelaps using `cartoee.get_image_collection_gif` as follows. This will create a \"timelapse\" subfolder in the Downloads directory."
@@ -490,10 +490,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca39ad57",
+   "id": "5e7be9e5",
    "metadata": {},
    "source": [
-    "### Recap"
+    "<figure>\n",
+    "  <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-gee-python/intro_gee_py_functions/clbj_gee_timelapse.gif\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-gee-python/intro_gee_py_functions/clbj_gee_timelapse.gif\" alt=\"CLBJ Timelapse\" width=\"500\"><figcaption>Time Lapse of CLBJ Surface Directional Reflectance True-Color Images</figcaption></a></figure> \n",
+    "\n",
+    "### Recap\n",
+    "\n",
+    "In this lesson we covered how to read in AOP Surface Directional Reflectance (SDR) datasets into GEE using Python with the pacckages `ee` and `geemap`. You learned how to write functions that mask out any data collected in >50% cloud cover conditions, whose reflectance values may differ from reflectance data collected in clear-sky conditions. You also got a chance to explore the interactive mapping tools that are made available as part of geemap. We encourage you to start writing functions and Python code on your own to expand upon these examples!"
    ]
   }
  ],
