--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -13,7 +13,7 @@
     "authors: Bridget Hass\n",
     "contributors: John Musinsky\n",
     "estimatedTime: 30 minutes\n",
-    "packagesLibraries: ee, geemap\n",
+    "packagesLibraries: earthengine-api, geemap\n",
     "topics:\n",
     "languagesTool: Python, Google Earth Engine\n",
     "dataProduct: DP3.30006.001\n",
@@ -499,7 +499,7 @@
     "\n",
     "### Recap\n",
     "\n",
-    "In this lesson we covered how to read in AOP Surface Directional Reflectance (SDR) datasets into GEE using Python with the pacckages `ee` and `geemap`. You learned how to write functions that mask out any data collected in >50% cloud cover conditions, whose reflectance values may differ from reflectance data collected in clear-sky conditions. You also got a chance to explore the interactive mapping tools that are made available as part of geemap. We encourage you to start writing functions and Python code on your own to expand upon these examples!"
+    "In this lesson we covered how to read in AOP Surface Directional Reflectance (SDR) datasets into GEE using Python with the packages `ee` and `geemap`. You learned how to write functions that mask out any data collected in >10% cloud cover conditions. You also got a chance to explore the interactive mapping tools that are made available as part of geemap. We encourage you to start writing functions and Python code on your own to expand upon these examples!"
    ]
   }
  ],
