--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -28,7 +28,7 @@
    "id": "919ba0ee",
    "metadata": {},
    "source": [
-    "div id=\"ds-objectives\" markdown=\"1\">\n",
+    "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
     "### Objectives\n",
     "After completing this tutorial, you will be able to use Python to:\n",
@@ -44,7 +44,7 @@
     "1. Sign up for a non-commercial Google Earth Engine account here https://code.earthengine.google.com/register.\n",
     "2. Install **Python 3.x**\n",
     "3. Install required Python packages (matplotlib, cartopy and the dependent packages are only required for the last optional part of the tutorial, to create a time-lapse gif)\n",
-    "    - ee\n",
+    "    - earthengine-api\n",
     "    - geemap\n",
     "    - matplotlib\n",
     "    - cartopy (dependencies: geos, shapely, pyproj)\n",
