--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -17,7 +17,7 @@
     "topics:\n",
     "languagesTool: Python, Google Earth Engine\n",
     "dataProduct: DP3.30006.001\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/\n",
+    "code1: code1: https://github.com/NEONScience/NEON-Data-Skills/edit/main/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb\n",
     "tutorialSeries: \n",
     "urlTitle: aop-refl-py-geemap\n",
     "---"
