--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb
@@ -9,15 +9,15 @@
     "syncID: 048ec0a5e30842acb2fbf1144454830e\n",
     "title: \"Intro to AOP Hyperspectral Data in Google Earth Engine (GEE) using Python geemap\"\n",
     "description: \"\"\n",
-    "dateCreated: 2023-06-\n",
+    "dateCreated: 2023-06-20\n",
     "authors: Bridget Hass\n",
     "contributors: John Musinsky\n",
     "estimatedTime: 30 minutes\n",
-    "packagesLibraries: ee, geemap\n",
+    "packagesLibraries: earthengine-api, geemap\n",
     "topics:\n",
     "languagesTool: Python, Google Earth Engine\n",
     "dataProduct: DP3.30006.001\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/\n",
+    "code1: https://github.com/NEONScience/NEON-Data-Skills/edit/main/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.ipynb\n",
     "tutorialSeries: \n",
     "urlTitle: aop-refl-py-geemap\n",
     "---"
@@ -51,7 +51,11 @@
     "\n",
     "Notes: \n",
     "- This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. This lesson was written in **Jupyter Notebook** so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using **Jupyter**, we recommend using **Spyder**, which has similar functionality. You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href=\"https://www.anaconda.com/products/distribution\" target=\"_blank\">Anaconda</a>.\n",
-    "  If cartopy is not installing using `conda install` or `pip install`, you may need to find the wheel file specific to your Python version, eg. `pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl`.\n",
+    "- If cartopy is not installing using `conda install` or `pip install`, you may need to find the wheel file specific to your Python version, eg. `pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl`.\n",
+    "  \n",
+    "### Additional Resources\n",
+    "- <a href=\"https://book.geemap.org/\" target=\"_blank\">geemap book</a>\n",
+    "- <a href=\"https://www.youtube.com/@giswqs\" target=\"_blank\">geemap YouTube channel</a>\n",
     "\n",
     "</div>"
    ]
@@ -66,6 +70,15 @@
     "import os\n",
     "import ee\n",
     "import geemap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d682bc2",
+   "metadata": {},
+   "source": [
+    "In order to use Earth Engine from within this Jupyter Notebook, we need to first Authenticate (which requires generating a token) and Initialize, as below. For more detailed instructions on the Authentication process, please refer to the: \n",
+    "<a href=\"https://book.geemap.org/chapters/01_introduction.html#earth-engine-authentication\" target=\"_blank\">geemap text book Earth Engine authentication section</a>."
    ]
   },
   {
