updates to fix super long output, re-knit

--- a/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
@@ -248,12 +248,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ca2e1c7",
+   "id": "dd465eaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "props = geemap.image_props(sdrCol.first())\n",
-    "props"
+    "\n",
+    "# Optionally display all properties by uncommenting the line below\n",
+    "# props"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca2e1c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the property names for the first 15 properties:\n",
+    "props.keys().getInfo()[:15]"
    ]
   },
   {
@@ -261,6 +274,8 @@
    "id": "d3384ca1",
    "metadata": {},
    "source": [
+    "You can also look at all the Image properties by typing `props`. This generates a long output, so we will just show a portion of the output from that:\n",
+    "\n",
     "```\n",
     "AOP_VISIT_NUMBER:1\n",
     "DESCRIPTION:Orthorectified surface directional reflectance (0-1 unitless, scaled by 10000) ...\n",
@@ -516,7 +531,7 @@
    "source": [
     "## Recap\n",
     "\n",
-    "In this lesson, you learned how to access the four NEON datasets that are available in GEE: Surface Directional Reflectance (SDR), Camera (RGB), and LiDAR-derived Digital Elevation (Terrain and Surface) Models (DTM and DSM) and Ecosystem Structure / Canopy Height Model (CHM). You practiced code to determine which datasets are available for a given Image Collection. You explored the image properties and learned how to filter on the metadata to pull out a subset of images from an Image Collection. You learned how to use `geemap` to add data layers to the interactive map panel. You learned how to select and visualize the Weather_Quality_Indicator band, which is a useful first step in working with any reflectance data. \n",
+    "In this lesson, you learned how to access the four NEON datasets that are available in GEE: Surface Directional Reflectance (SDR), Camera (RGB), and LiDAR-derived Digital Elevation (Terrain and Surface) Models (DTM and DSM) and Ecosystem Structure / Canopy Height Model (CHM). You generated code to determine which AOP datasets are available in GEE for a given Image Collection. You explored the SDR image properties and learned how to filter on specified metadata to pull out a subset of Images or a single Image from an Image Collection. You learned how to use `geemap` to add data layers to the interactive map panel. And lastly, you learned how to select and visualize the `Weather_Quality_Indicator` band, which is a useful first step in working with AOP reflectance data. \n",
     "\n",
     "This is a great starting point for your own research!"
    ]
