--- a/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
+++ b/tutorials/Other/GEE_Python/01_aop_intro_gee_py/Intro_AOP_Datasets_GEE_Python.ipynb
@@ -46,8 +46,8 @@
     "1. Sign up for a non-commercial Google Earth Engine account here https://code.earthengine.google.com/register.\n",
     "2. Install **Python 3.x**\n",
     "3. Install required Python packages (matplotlib, cartopy and the dependent packages are only required for the last optional part of the tutorial, to create a time-lapse gif)\n",
-    "    - earthengine-api\n",
-    "    - geemap\n",
+    "- earthengine-api\n",
+    "- geemap\n",
     "\n",
     "Notes: \n",
     "- This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. This lesson was written in **Jupyter Notebook** so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. \n",
@@ -55,8 +55,9 @@
     "\n",
     "\n",
     "### Additional Resources\n",
-    "- <a href=\"https://book.geemap.org/\" target=\"_blank\">geemap book</a>\n",
-    "- <a href=\"https://www.youtube.com/@giswqs\" target=\"_blank\">geemap YouTube channel</a>\n",
+    "- <a href=\"https://developers.google.com/earth-engine/tutorials/community/intro-to-python-api\" target=\"_blank\">Google Developers Intro to Python API</a>\n",
+    "- <a href=\"https://book.geemap.org/\" target=\"_blank\">`geemap` Text Book</a>\n",
+    "- <a href=\"https://www.youtube.com/@giswqs\" target=\"_blank\">`geemap` YouTube Channel</a>\n",
     "\n",
     "</div>"
    ]
