minor updates to intro paragraph

--- a/tutorials/Python/AOP/Lidar/uncertainty-and-validation/lidar_uncertainty_py/lidar_uncertainty_py.ipynb
+++ b/tutorials/Python/AOP/Lidar/uncertainty-and-validation/lidar_uncertainty_py/lidar_uncertainty_py.ipynb
@@ -28,9 +28,7 @@
    "id": "scheduled-peter",
    "metadata": {},
    "source": [
-    "\n",
-    "In this exercise we will analyze the several NEON level 3 lidar rasters to assess \n",
-    "the uncertainty between days. \n",
+    "In this exercise we will analyze several NEON Level-3 lidar rasters and assess the uncertainty between days. \n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
@@ -61,18 +59,12 @@
     "</div>\n",
     "\n",
     "\n",
-    "In 2016 the NEON AOP flew the PRIN site in D11 on a poor weather day to \n",
-    "ensure coverage of the site. The following day, the weather improved and the \n",
-    "site was flown again to collect good weather spectrometer data. Having \n",
-    "collections only one day apart provides an opportunity to assess LiDAR \n",
-    "uncertainty because we should expect that nothing has chnaged between the \n",
-    "two collects. In this exercise we will analyze the several NEON Level 3 lidar \n",
-    "rasters to assess the uncertainty.\n",
+    "In 2016 the NEON AOP flew the PRIN site in D11 on a poor weather day to ensure coverage of the site. The following day, the weather improved and the site was flown again to collect clear-weather spectrometer data. Having collections only one day apart provides an opportunity to assess LiDAR uncertainty because we should expect that nothing has changed between the \n",
+    "two collects. In this exercise we will analyze several NEON Level 3 lidar rasters to assess the uncertainty.\n",
     "\n",
     "## Set up system\n",
     "\n",
-    "First, we'll set up our system and load needed packages. \n",
-    "\n"
+    "First, we'll set up our system and import the required Python packages. "
    ]
   },
   {
@@ -522,9 +514,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -536,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
