updates to text, clean-up

--- a/tutorials/Python/AOP/Lidar/intro-lidar/classify-lidar-rasters/classify-chm.ipynb
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/classify-lidar-rasters/classify-chm.ipynb
@@ -11,12 +11,12 @@
     "dateCreated: 2018-07-04 \n",
     "authors: Bridget Hass\n",
     "contributors: Donal O'Leary, Max Burner\n",
-    "estimatedTime: 1 hour\n",
+    "estimatedTime: 30 minutes\n",
     "packagesLibraries: gdal, rasterio, requests\n",
     "topics: lidar, raster, remote-sensing\n",
     "languagesTool: Python\n",
     "dataProduct: DP1.30003, DP3.30015, DP3.30024, DP3.30025\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/Lidar/intro-lidar/classify_raster_with_threshold-2018-py/classify_raster_with_threshold-2018-py.ipynb\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Lidar/intro-lidar/classify-lidar-rasters/classify-chm.ipynb\n",
     "tutorialSeries: intro-lidar-py-series\n",
     "urlTitle: classify-chm-py\n",
     "---"
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we will learn how to read NEON lidar raster GeoTIFFS (CHM, Slope, and Aspect) into Python `rasterio` object and will classify the CHM into height bins.\n",
+    "This tutorial covers how to read in a NEON lidar Canopy Height Model (CHM) geotiff file into a Python `rasterio` object, shows some basic information about the raster data, and then ends with classifying the CHM into height bins.\n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
@@ -46,9 +46,7 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "For this lesson, we will be reading in a Canopy Height Model geotiff file, derived from lidar data collected at NEON's Teakettle (TEAK) site in California\n",
-    "\n",
-    "The data used for this lesson will be downloaded in the Python script using the `requests` package.\n",
+    "For this lesson, we will read in a Canopy Height Model data collected at NEON's <a href=\"https://www.neonscience.org/field-sites/teak\" target=\"_blank\">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.\n",
     "\n",
     "</div>"
    ]
@@ -57,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we will work with the NEON AOP L3 LiDAR ecoysystem structure (Canopy Height Model) data product. For more information about NEON data products and the CHM product DP3.30015.001, see the <a href=\"http://data.neonscience.org/data-products/DP3.30015.001\" target=\"_blank\">NEON Data Product Catalog</a>. \n",
+    "In this tutorial, we will work with the NEON AOP L3 LiDAR ecoysystem structure (Canopy Height Model) data product. For more information about NEON data products and the CHM product DP3.30015.001, see the <a href=\"http://data.neonscience.org/data-products/DP3.30015.001\" target=\"_blank\">Ecosystem structure</a> data product page on NEON's Data Portal. \n",
     "\n",
     "First, let's import the required packages and set our plot display to be in-line:"
    ]
@@ -76,6 +74,13 @@
     "from rasterio.plot import show, show_hist\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, let's download a file. For this tutorial, we will use the `requests` package to download a raster file from the public link where the data is stored. For simplicity, we will show how to download to a data folder in the working directory. You can move the data to a different folder, but be sure to update the path to your data accordingly. "
    ]
   },
   {
@@ -155,9 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot Canopy Height Data and Histogram\n",
+    "## Plot the Canopy Height Map and Histogram\n",
     "\n",
-    "We can use one of rasterio's built-in functions to plot and visualize the CHM tile. It is often useful to plot a histogram of the geotiff data in order to get a sense of the range and distribution of values. "
+    "We can use rasterio's built-in functions `show` and `show_hist` to plot and visualize the CHM tile. It is often useful to plot a histogram of the geotiff data in order to get a sense of the range and distribution of values. "
    ]
   },
   {
@@ -181,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On your own, adjust the number of bins, and range of the y-axis to get a good idea of the distribution of the canopy height values. We can see that a large portion of the values are zero. These correspond to bare ground. Let's look at a  histogram and plot the data without these zero values. To do this, we'll remove all values > 1m. Due to the vertical range resolution of the lidar sensor, data collected with the Optech Gemini sensor can only resolve the ground to within 2 m, so anything below that height will be rounded down to zero. Our newer sensors (Riegl Q780 and Optech Galaxy) have a higher resolution, so the ground can be resolved to within ~0.7 m."
+    "On your own, adjust the number of bins, and range of the y-axis to get a better sense of the distribution of the canopy height values. We can see that a large portion of the values are zero. These correspond to bare ground. Let's look at a  histogram and plot the data without these zero values. To do this, we'll remove all values > 1 m. Due to the vertical range resolution of the lidar sensor, data collected with the Optech Gemini sensor can only resolve the ground to within 2 m, so anything below that height will be rounded down to zero. Our newer sensors (Riegl Q780 and Optech Galaxy) have a higher resolution, so the ground can be resolved to within ~0.7 m."
    ]
   },
   {
@@ -304,33 +309,16 @@
     "\n",
     "Create the following threshold classified outputs:\n",
     "\n",
-    "1. A raster where NDVI values are classified into the following categories:\n",
-    "    * Low greenness: NDVI < 0.3\n",
-    "    * Medium greenness: 0.3 < NDVI < 0.6\n",
-    "    * High greenness: NDVI > 0.6\n",
-    "2. A raster where aspect is classified into North and South facing slopes: \n",
-    "    * North: 0-45 & 315-360 degrees \n",
-    "    * South: 135-225 degrees\n",
+    "1. An NDVI raster where values are classified into the following categories:\n",
+    "- Low greenness: NDVI < 0.3\n",
+    "- Medium greenness: 0.3 < NDVI < 0.6\n",
+    "- High greenness: NDVI > 0.6\n",
     "\n",
-    " <figure>\n",
-    "\t<a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/NSEWclassification_BozEtAl2015.jpg\">\n",
-    "\t<img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/geospatial-skills/NSEWclassification_BozEtAl2015.jpg\"></a>\n",
-    "\t<figcaption> Reclassification of aspect (azimuth) values: North, 315-45 \n",
-    "\tdegrees; East, 45-135 degrees; South, 135-225 degrees; West, 225-315 degrees.\n",
-    "\tSource: <a href=\"http://www.aimspress.com/article/10.3934/energy.2015.3.401/fulltext.html\"> Boz et al. 2015 </a>\n",
-    "\t</figcaption>\n",
-    "</figure>\n",
+    "2. A classified aspect raster where the data is grouped into North and South facing slopes (or all four cardinal directions): \n",
+    "- North: 0-45 & 315-360 degrees \n",
+    "- South: 135-225 degrees\n",
     "\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References \n",
-    "\n",
-    "Khosravipour, Anahita & Skidmore, Andrew & Isenburg, Martin & Wang, Tiejun & Hussin, Yousif. (2014). <a href=\"https://www.researchgate.net/publication/273663100_Generating_Pit-free_Canopy_Height_Models_from_Airborne_Lidar\" target=\"_blank\"> Generating Pit-free Canopy Height Models from Airborne Lidar. Photogrammetric Engineering & Remote Sensing</a>. 80. 863-872. 10.14358/PERS.80.9.863. \n"
    ]
   }
  ],
