add re-knit files including outputs

--- a/tutorials/Python/AOP/Lidar/intro-lidar/classify-lidar-rasters/classify-chm.ipynb
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/classify-lidar-rasters/classify-chm.ipynb
@@ -34,8 +34,8 @@
     "\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
-    "* User rasterio to read in a NEON lidar raster geotiff file (e.g., CHM, slope aspect) \n",
-    "* Plot a raster tile and histogram of the values\n",
+    "* User rasterio to read in a NEON lidar raster geotiff file\n",
+    "* Plot a raster tile and histogram of the data values\n",
     "* Create a classified raster object using thresholds\n",
     "\n",
     "### Install Python Packages\n",
